house price prediction

--- a/day4/housepriceprediction.ipynb
+++ b/day4/housepriceprediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "6657b4d1",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "642d69c9",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "2dbc91f7",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "71f50185",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "29f8fd12",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "30bacc24",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "259291f1",
    "metadata": {},
    "outputs": [
@@ -300,76 +300,24 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
-      "Enter the following house details:\n",
-      "Error: could not convert string to float: ''. Please try again.\n",
-      "\n",
       "Enter the following house details:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\TechAxis\\week56\\venv\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Predicted house price: ₹11,473,479.29\n",
+      "Exiting the prediction loop. Goodbye!\n"
      ]
     }
    ],
