house price prediction streamlit version

--- a/day4/housepriceprediction.ipynb
+++ b/day4/housepriceprediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6657b4d1",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "642d69c9",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2dbc91f7",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "71f50185",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "29f8fd12",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "30bacc24",
    "metadata": {},
    "outputs": [
@@ -291,76 +291,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "259291f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# while True:\n",
+    "#     try:\n",
+    "#         print(\"\\nEnter the following house details:\")\n",
+    "\n",
+    "#         area = float(input(\"Area (in sqft): \"))\n",
+    "#         bedrooms = int(input(\"Number of bedrooms: \"))\n",
+    "#         bathrooms = int(input(\"Number of bathrooms: \"))\n",
+    "#         stories = int(input(\"Number of stories: \"))\n",
+    "#         mainroad = int(input(\"Main road (1 = yes, 0 = no): \"))\n",
+    "#         guestroom = int(input(\"Guest room (1 = yes, 0 = no): \"))\n",
+    "#         basement = int(input(\"Basement (1 = yes, 0 = no): \"))\n",
+    "#         hotwaterheating = int(input(\"Hot water heating (1 = yes, 0 = no): \"))\n",
+    "#         airconditioning = int(input(\"Air conditioning (1 = yes, 0 = no): \"))\n",
+    "#         parking = int(input(\"Parking spaces: \"))\n",
+    "#         prefarea = int(input(\"Preferred area (1 = yes, 0 = no): \"))\n",
+    "#         furnishingstatus = int(input(\"Furnishing status (0 = unfurnished, 1 = semi-furnished, 2 = furnished): \"))\n",
+    "\n",
+    "#         # Prepare input\n",
+    "#         input_data = [[area, bedrooms, bathrooms, stories, mainroad,\n",
+    "#                        guestroom, basement, hotwaterheating, airconditioning,\n",
+    "#                        parking, prefarea, furnishingstatus]]\n",
+    "\n",
+    "#         # Predict\n",
+    "#         predicted_price = model.predict(input_data)\n",
+    "#         print(f\"\\nPredicted house price: ₹{predicted_price[0]:,.2f}\")\n",
+    "\n",
+    "#         # Exit condition\n",
+    "#         again = input(\"\\nDo you want to predict another house price? (yes/no): \").strip().lower()\n",
+    "#         if again != 'yes':\n",
+    "#             print(\"Exiting the prediction loop. Goodbye!\")\n",
+    "#             break\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"Error: {e}. Please try again.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a11f2489",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Enter the following house details:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\TechAxis\\week56\\venv\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Predicted house price: ₹11,473,479.29\n",
-      "Exiting the prediction loop. Goodbye!\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['house_price_prediction.pkl']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "while True:\n",
-    "    try:\n",
-    "        print(\"\\nEnter the following house details:\")\n",
-    "\n",
-    "        area = float(input(\"Area (in sqft): \"))\n",
-    "        bedrooms = int(input(\"Number of bedrooms: \"))\n",
-    "        bathrooms = int(input(\"Number of bathrooms: \"))\n",
-    "        stories = int(input(\"Number of stories: \"))\n",
-    "        mainroad = int(input(\"Main road (1 = yes, 0 = no): \"))\n",
-    "        guestroom = int(input(\"Guest room (1 = yes, 0 = no): \"))\n",
-    "        basement = int(input(\"Basement (1 = yes, 0 = no): \"))\n",
-    "        hotwaterheating = int(input(\"Hot water heating (1 = yes, 0 = no): \"))\n",
-    "        airconditioning = int(input(\"Air conditioning (1 = yes, 0 = no): \"))\n",
-    "        parking = int(input(\"Parking spaces: \"))\n",
-    "        prefarea = int(input(\"Preferred area (1 = yes, 0 = no): \"))\n",
-    "        furnishingstatus = int(input(\"Furnishing status (0 = unfurnished, 1 = semi-furnished, 2 = furnished): \"))\n",
-    "\n",
-    "        # Prepare input\n",
-    "        input_data = [[area, bedrooms, bathrooms, stories, mainroad,\n",
-    "                       guestroom, basement, hotwaterheating, airconditioning,\n",
-    "                       parking, prefarea, furnishingstatus]]\n",
-    "\n",
-    "        # Predict\n",
-    "        predicted_price = model.predict(input_data)\n",
-    "        print(f\"\\nPredicted house price: ₹{predicted_price[0]:,.2f}\")\n",
-    "\n",
-    "        # Exit condition\n",
-    "        again = input(\"\\nDo you want to predict another house price? (yes/no): \").strip().lower()\n",
-    "        if again != 'yes':\n",
-    "            print(\"Exiting the prediction loop. Goodbye!\")\n",
-    "            break\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: {e}. Please try again.\")\n"
+    "import joblib\n",
+    "joblib.dump(model,'house_price_prediction.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d6fba76b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['house_price_encoder.pkl']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(label_encoder,'house_price_encoder.pkl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a11f2489",
+   "id": "738a7332",
    "metadata": {},
    "outputs": [],
    "source": []
