employee attrition app

--- a/day5/employee_attrition.ipynb
+++ b/day5/employee_attrition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "28d3dd12",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "f3258d9d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "84c0357e",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "[2 rows x 35 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,61 +165,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "1b109ca0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Non-Travel' 'Travel_Frequently' 'Travel_Rarely']\n",
-      "['Human Resources' 'Research & Development' 'Sales']\n",
-      "['Human Resources' 'Life Sciences' 'Marketing' 'Medical' 'Other'\n",
-      " 'Technical Degree']\n",
-      "['Female' 'Male']\n",
-      "['Healthcare Representative' 'Human Resources' 'Laboratory Technician'\n",
-      " 'Manager' 'Manufacturing Director' 'Research Director'\n",
-      " 'Research Scientist' 'Sales Executive' 'Sales Representative']\n",
-      "['Divorced' 'Married' 'Single']\n",
-      "['No' 'Yes']\n",
-      "['No' 'Yes']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "# from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "label_encoder = LabelEncoder()\n",
+    "# label_encoder = LabelEncoder()\n",
     "\n",
-    "df['BusinessTravel']=label_encoder.fit_transform(df['BusinessTravel'])\n",
-    "print(label_encoder.classes_)\n",
+    "# df['BusinessTravel']=label_encoder.fit_transform(df['BusinessTravel'])\n",
+    "# print(label_encoder.classes_)\n",
     "\n",
-    "df['Department']=label_encoder.fit_transform(df['Department'])\n",
-    "print(label_encoder.classes_)\n",
+    "# df['Department']=label_encoder.fit_transform(df['Department'])\n",
+    "# print(label_encoder.classes_)\n",
     "\n",
-    "df['EducationField']=label_encoder.fit_transform(df['EducationField'])\n",
-    "print(label_encoder.classes_)\n",
+    "# df['EducationField']=label_encoder.fit_transform(df['EducationField'])\n",
+    "# print(label_encoder.classes_)\n",
     "\n",
-    "df['Gender']=label_encoder.fit_transform(df['Gender'])\n",
-    "print(label_encoder.classes_)\n",
+    "# df['Gender']=label_encoder.fit_transform(df['Gender'])\n",
+    "# print(label_encoder.classes_)\n",
     "\n",
-    "df['JobRole']=label_encoder.fit_transform(df['JobRole'])\n",
-    "print(label_encoder.classes_)\n",
+    "# df['JobRole']=label_encoder.fit_transform(df['JobRole'])\n",
+    "# print(label_encoder.classes_)\n",
     "\n",
-    "df['MaritalStatus']=label_encoder.fit_transform(df['MaritalStatus'])\n",
-    "print(label_encoder.classes_)\n",
+    "# df['MaritalStatus']=label_encoder.fit_transform(df['MaritalStatus'])\n",
+    "# print(label_encoder.classes_)\n",
     "\n",
-    "df['OverTime']=label_encoder.fit_transform(df['OverTime'])\n",
-    "print(label_encoder.classes_)\n",
+    "# df['OverTime']=label_encoder.fit_transform(df['OverTime'])\n",
+    "# print(label_encoder.classes_)\n",
     "\n",
-    "df['Attrition']=label_encoder.fit_transform(df['Attrition'])\n",
-    "print(label_encoder.classes_)\n"
+    "# df['Attrition']=label_encoder.fit_transform(df['Attrition'])\n",
+    "# print(label_encoder.classes_)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
+   "id": "5dae7e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['label_encoders.pkl']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In your training script (before saving)\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Create separate label encoders for each column\n",
+    "label_encoders = {\n",
+    "    'BusinessTravel': LabelEncoder().fit(df['BusinessTravel']),\n",
+    "    'Department': LabelEncoder().fit(df['Department']),\n",
+    "    'EducationField': LabelEncoder().fit(df['EducationField']),\n",
+    "    'Gender': LabelEncoder().fit(df['Gender']),\n",
+    "    'JobRole': LabelEncoder().fit(df['JobRole']),\n",
+    "    'MaritalStatus': LabelEncoder().fit(df['MaritalStatus']),\n",
+    "    'OverTime': LabelEncoder().fit(df['OverTime'])\n",
+    "}\n",
+    "\n",
+    "# Apply transformations\n",
+    "df['BusinessTravel'] = label_encoders['BusinessTravel'].transform(df['BusinessTravel'])\n",
+    "df['Department'] = label_encoders['Department'].transform(df['Department'])\n",
+    "df['EducationField'] = label_encoders['EducationField'].transform(df['EducationField'])\n",
+    "df['Gender'] = label_encoders['Gender'].transform(df['Gender'])\n",
+    "df['JobRole'] = label_encoders['JobRole'].transform(df['JobRole'])\n",
+    "df['MaritalStatus'] = label_encoders['MaritalStatus'].transform(df['MaritalStatus'])\n",
+    "df['OverTime'] = label_encoders['OverTime'].transform(df['OverTime'])\n",
+    "\n",
+    "# Save the label encoders\n",
+    "joblib.dump(label_encoders, 'label_encoders.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "083070fd",
    "metadata": {},
    "outputs": [
@@ -264,7 +291,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,17 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "2dc92957",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "np.int64(0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "078f3647",
    "metadata": {},
    "outputs": [
@@ -307,44 +334,44 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1470 entries, 0 to 1469\n",
       "Data columns (total 34 columns):\n",
-      " #   Column                    Non-Null Count  Dtype\n",
-      "---  ------                    --------------  -----\n",
-      " 0   Age                       1470 non-null   int64\n",
-      " 1   Attrition                 1470 non-null   int32\n",
-      " 2   BusinessTravel            1470 non-null   int32\n",
-      " 3   DailyRate                 1470 non-null   int64\n",
-      " 4   Department                1470 non-null   int32\n",
-      " 5   DistanceFromHome          1470 non-null   int64\n",
-      " 6   Education                 1470 non-null   int64\n",
-      " 7   EducationField            1470 non-null   int32\n",
-      " 8   EmployeeCount             1470 non-null   int64\n",
-      " 9   EmployeeNumber            1470 non-null   int64\n",
-      " 10  EnvironmentSatisfaction   1470 non-null   int64\n",
-      " 11  Gender                    1470 non-null   int32\n",
-      " 12  HourlyRate                1470 non-null   int64\n",
-      " 13  JobInvolvement            1470 non-null   int64\n",
-      " 14  JobLevel                  1470 non-null   int64\n",
-      " 15  JobRole                   1470 non-null   int32\n",
-      " 16  JobSatisfaction           1470 non-null   int64\n",
-      " 17  MaritalStatus             1470 non-null   int32\n",
-      " 18  MonthlyIncome             1470 non-null   int64\n",
-      " 19  MonthlyRate               1470 non-null   int64\n",
-      " 20  NumCompaniesWorked        1470 non-null   int64\n",
-      " 21  OverTime                  1470 non-null   int32\n",
-      " 22  PercentSalaryHike         1470 non-null   int64\n",
-      " 23  PerformanceRating         1470 non-null   int64\n",
-      " 24  RelationshipSatisfaction  1470 non-null   int64\n",
-      " 25  StandardHours             1470 non-null   int64\n",
-      " 26  StockOptionLevel          1470 non-null   int64\n",
-      " 27  TotalWorkingYears         1470 non-null   int64\n",
-      " 28  TrainingTimesLastYear     1470 non-null   int64\n",
-      " 29  WorkLifeBalance           1470 non-null   int64\n",
-      " 30  YearsAtCompany            1470 non-null   int64\n",
-      " 31  YearsInCurrentRole        1470 non-null   int64\n",
-      " 32  YearsSinceLastPromotion   1470 non-null   int64\n",
-      " 33  YearsWithCurrManager      1470 non-null   int64\n",
-      "dtypes: int32(8), int64(26)\n",
-      "memory usage: 344.7 KB\n",
+      " #   Column                    Non-Null Count  Dtype \n",
+      "---  ------                    --------------  ----- \n",
+      " 0   Age                       1470 non-null   int64 \n",
+      " 1   Attrition                 1470 non-null   object\n",
+      " 2   BusinessTravel            1470 non-null   int64 \n",
+      " 3   DailyRate                 1470 non-null   int64 \n",
+      " 4   Department                1470 non-null   int64 \n",
+      " 5   DistanceFromHome          1470 non-null   int64 \n",
+      " 6   Education                 1470 non-null   int64 \n",
+      " 7   EducationField            1470 non-null   int64 \n",
+      " 8   EmployeeCount             1470 non-null   int64 \n",
+      " 9   EmployeeNumber            1470 non-null   int64 \n",
+      " 10  EnvironmentSatisfaction   1470 non-null   int64 \n",
+      " 11  Gender                    1470 non-null   int64 \n",
+      " 12  HourlyRate                1470 non-null   int64 \n",
+      " 13  JobInvolvement            1470 non-null   int64 \n",
+      " 14  JobLevel                  1470 non-null   int64 \n",
+      " 15  JobRole                   1470 non-null   int64 \n",
+      " 16  JobSatisfaction           1470 non-null   int64 \n",
+      " 17  MaritalStatus             1470 non-null   int64 \n",
+      " 18  MonthlyIncome             1470 non-null   int64 \n",
+      " 19  MonthlyRate               1470 non-null   int64 \n",
+      " 20  NumCompaniesWorked        1470 non-null   int64 \n",
+      " 21  OverTime                  1470 non-null   int64 \n",
+      " 22  PercentSalaryHike         1470 non-null   int64 \n",
+      " 23  PerformanceRating         1470 non-null   int64 \n",
+      " 24  RelationshipSatisfaction  1470 non-null   int64 \n",
+      " 25  StandardHours             1470 non-null   int64 \n",
+      " 26  StockOptionLevel          1470 non-null   int64 \n",
+      " 27  TotalWorkingYears         1470 non-null   int64 \n",
+      " 28  TrainingTimesLastYear     1470 non-null   int64 \n",
+      " 29  WorkLifeBalance           1470 non-null   int64 \n",
+      " 30  YearsAtCompany            1470 non-null   int64 \n",
+      " 31  YearsInCurrentRole        1470 non-null   int64 \n",
+      " 32  YearsSinceLastPromotion   1470 non-null   int64 \n",
+      " 33  YearsWithCurrManager      1470 non-null   int64 \n",
+      "dtypes: int64(33), object(1)\n",
+      "memory usage: 390.6+ KB\n",
       "None\n"
      ]
     }
@@ -357,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "0fa81efc",
    "metadata": {},
    "outputs": [
@@ -444,18 +471,18 @@
       "1469                     2  \n",
       "\n",
       "[1470 rows x 33 columns]\n",
-      "      Attrition\n",
-      "0             1\n",
-      "1             0\n",
-      "2             1\n",
-      "3             0\n",
-      "4             0\n",
-      "...         ...\n",
-      "1465          0\n",
-      "1466          0\n",
-      "1467          0\n",
-      "1468          0\n",
-      "1469          0\n",
+      "     Attrition\n",
+      "0          Yes\n",
+      "1           No\n",
+      "2          Yes\n",
+      "3           No\n",
+      "4           No\n",
+      "...        ...\n",
+      "1465        No\n",
+      "1466        No\n",
+      "1467        No\n",
+      "1468        No\n",
+      "1469        No\n",
       "\n",
       "[1470 rows x 1 columns]\n"
      ]
@@ -474,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "0f6db3b0",
    "metadata": {},
    "outputs": [
@@ -489,7 +516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\minen\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\validation.py:1406: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "d:\\TechAxis\\week56\\venv\\Lib\\site-packages\\sklearn\\utils\\validation.py:1408: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
     }
@@ -502,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "1c582f1b",
    "metadata": {},
    "outputs": [],
@@ -512,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "bd7e7338",
    "metadata": {},
    "outputs": [
@@ -526,8 +553,8 @@
       "Classification Report: \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.99      0.94       255\n",
-      "           1       0.78      0.18      0.29        39\n",
+      "          No       0.89      0.99      0.94       255\n",
+      "         Yes       0.78      0.18      0.29        39\n",
       "\n",
       "    accuracy                           0.88       294\n",
       "   macro avg       0.83      0.59      0.61       294\n",
@@ -548,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "bab1302d-6854-487f-ba3c-d233d46e69d5",
    "metadata": {},
    "outputs": [
@@ -556,7 +583,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n"
+      "['Yes']\n"
      ]
     },
     {
