--- a/day6/email_detection.ipynb
+++ b/day6/email_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "07265a3b",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import joblib\n",
     "import seaborn as sns \n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "40c7df58",
    "metadata": {},
    "outputs": [],
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "f33b85b1",
    "metadata": {},
    "outputs": [],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "5b6c87ed",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "5442ec11",
    "metadata": {},
    "outputs": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "9333344d",
    "metadata": {},
    "outputs": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "084b49c9",
    "metadata": {},
    "outputs": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "3c80a44e",
    "metadata": {},
    "outputs": [
@@ -157,11 +158,90 @@
    ],
    "source": [
     "new_message=input(\"Enter mail: \")\n",
-    "new_message=list(new_message)\n",
-    "newz_message_vec = vectorizer.transform(new_message)\n",
+    "newz_message_vec = vectorizer.transform([new_message]) \n",
     "prediction=model.predict(new_message_vec)\n",
     "print(\"\\nNew message prediction: \",\"Spam\" if prediction[0]==1 else \"Ham\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e002cd33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['modelforemailspamdetection.pkl']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model,\"modelforemailspamdetection.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "949af2d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=joblib.load(\"modelforemailspamdetection.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "02b7f7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression()\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0f58fe95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "New message prediction:  Ham\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_message=input(\"Enter mail: \")\n",
+    "new_message_vec = vectorizer.transform([new_message]) \n",
+    "\n",
+    "prediction=model.predict(new_message_vec)\n",
+    "print(\"\\nNew message prediction: \",\"Spam\" if prediction[0]==1 else \"Ham\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "374b1606",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
