--- a/day6/email_detection.ipynb
+++ b/day6/email_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "07265a3b",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "40c7df58",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "f33b85b1",
    "metadata": {},
    "outputs": [],
@@ -40,10 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "5b6c87ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vectorizer.pkl']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x=df['message']\n",
     "df['label']=df['label'].map({'ham':0,'spam':1})\n",
@@ -52,12 +63,14 @@
     "\n",
     "vectorizer=CountVectorizer()\n",
     "X_train_vec=vectorizer.fit_transform(X_train)\n",
-    "X_test_vec=vectorizer.transform(X_test)"
+    "X_test_vec=vectorizer.transform(X_test)\n",
+    "\n",
+    "joblib.dump(vectorizer,\"vectorizer.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "5442ec11",
    "metadata": {},
    "outputs": [
@@ -79,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "9333344d",
    "metadata": {},
    "outputs": [
@@ -121,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "084b49c9",
    "metadata": {},
    "outputs": [
@@ -143,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "3c80a44e",
    "metadata": {},
    "outputs": [
@@ -165,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "e002cd33",
    "metadata": {},
    "outputs": [
@@ -175,7 +188,7 @@
        "['modelforemailspamdetection.pkl']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "949af2d4",
    "metadata": {},
    "outputs": [],
@@ -196,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "02b7f7ec",
    "metadata": {},
    "outputs": [
@@ -214,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "0f58fe95",
    "metadata": {},
    "outputs": [
