--- a/MNIST_CNN/MNIST_CNN.ipynb
+++ b/MNIST_CNN/MNIST_CNN.ipynb
@@ -2,12 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "tSefeXFRJGEi"
       },
       "outputs": [],
       "source": [
+        "#MNIST CNN first project\n",
         "import pandas as pd"
       ]
     },
