--- a/stock/ntc.ipynb
+++ b/stock/ntc.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f034d82f",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,6 @@
    "source": [
     "from sklearn.metrics import mean_squared_error,r2_score\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
     "\n",
     "y_pred=model.predict(X_test)\n",
     "\n",
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "aa86bde7",
    "metadata": {},
    "outputs": [
@@ -505,9 +504,9 @@
     }
    ],
    "source": [
-    "open_price=int(input(\"Enter the open price: \"))\n",
-    "High_price=int(input(\"Enter the high price: \"))\n",
-    "Low_price=int(input(\"Enter the low price: \"))\n",
+    "open_price=float(input(\"Enter the open price: \"))\n",
+    "High_price=float(input(\"Enter the high price: \"))\n",
+    "Low_price=float(input(\"Enter the low price: \"))\n",
     "\n",
     "Outcome=model.predict([[open_price,High_price,Low_price]])\n",
     "print(Outcome)"
